针对排版的大改动，可能导致显示错误甚至部分内容缺失（全局的正则替换）

--- a/docs/course/CS/多媒体技术.md
+++ b/docs/course/CS/多媒体技术.md
@@ -26,9 +26,9 @@
 - RGB、HSI、YUV
 
   - 优势、适用场景
-  - RGB与HSI的转换
+  - RGB 与 HSI 的转换
     - 均值、方差、旋转角
-  - YUV用于彩色图像压缩
+  - YUV 用于彩色图像压缩
 
 - 冗余与压缩方法
 
@@ -53,9 +53,9 @@
     - 上放策略：码方差更小
     - 平均码长和码方差计算
   - **算术编码**
-    - 不排序、按自然顺序，从0到1赋值（从下往上）
+    - 不排序、按自然顺序，从 0 到 1 赋值（从下往上）
 
-- LZW字典编码
+- LZW 字典编码
 
   - LZ77：隐式字典，要求上下文相关性比较强
   - LZ78：二元形式字典，为了照顾查不到字典的情况
@@ -73,19 +73,19 @@
 
 - 帧类型
 
-  - I帧、P帧、B帧
-    - B帧会打乱编码顺序，且需要缓存
-    - I帧一般比P帧大
-  - 视频帧不应当全P帧
+  - I 帧、P 帧、B 帧
+    - B 帧会打乱编码顺序，且需要缓存
+    - I 帧一般比 P 帧大
+  - 视频帧不应当全 P 帧
     - 错误的时间传递
     - 进度条不能调整
     - 场景切换（？）
 
 - 宏块类型
 
-  - Intra宏块、Inter宏块
+  - Intra 宏块、Inter 宏块
 
-- P帧Intra宏块
+- P 帧 Intra 宏块
 
   - 出现了新目标（极端情况：场景切换）
 
@@ -111,7 +111,7 @@
   - 预测是对块的预测
 
 - 码流结构
-- 压缩标准JPEG、MPEG、H.26X
+- 压缩标准 JPEG、MPEG、H.26X
   - 分级压缩
 
 ### 第三章  语音音频压缩
@@ -136,7 +136,7 @@
 
   先进行非线性压扩，再进行均匀量化。
 
-- PCM→DPCM（预测）→ADPCM（预测）→子带ADPCM（频率变换）
+- PCM→DPCM（预测）→ADPCM（预测）→子带 ADPCM（频率变换）
 
 - 语音数字化模型
 
@@ -146,9 +146,9 @@
 
   闭环模式与开环模式（如何选择的问题）
 
-- 语音音频标准的MP3
+- 语音音频标准的 MP3
 
-  MP3是MPEG1的第3层
+  MP3 是 MPEG1 的第 3 层
 
 - 双声道编码
 
@@ -189,7 +189,7 @@
     - 语音特性修正策略
     - 优缺点
 
-- VoIP话音质量
+- VoIP 话音质量
 
   - 影响因素
 
@@ -226,8 +226,8 @@
 
 ##### 1.1 媒体的概念
 
-- 在计算机领域中，媒体有两种含义，一是 **信息的载体** ，如磁带、磁盘、光盘和半导体存储器，一是指 **载体的信息** ，如文字、声音、图形和图像。
-- 按照国际电信联盟ITU-T建议的定义，媒体主要有 **五种形式** ，这些媒体形式在多媒体领域是相互密切关联的。
+- 在计算机领域中，媒体有两种含义，一是**信息的载体**，如磁带、磁盘、光盘和半导体存储器，一是指**载体的信息**，如文字、声音、图形和图像。
+- 按照国际电信联盟 ITU-T 建议的定义，媒体主要有**五种形式**，这些媒体形式在多媒体领域是相互密切关联的。
   - 感知媒体
   - 表示媒体
   - 表现媒体
@@ -421,15 +421,15 @@
 
 - 色彩模型
 
-  - RGB模型
+  - RGB 模型
 
     - 符合人眼客观构造，但不符合主观理解
 
-  - HSI模型
+  - HSI 模型
 
     - 色调与亮度、饱和度相互独立，对光照变化更鲁棒
 
-  - RGB到HSI模型转换
+  - RGB 到 HSI 模型转换
 
   - YCbCr
 
@@ -449,14 +449,14 @@
 
   - 压缩比、失真度、计算复杂度
   - 客观质量评价指标——峰值信噪比
-    - 均方误差MSE越小，PSNR越大，质量越好
+    - 均方误差 MSE 越小，PSNR 越大，质量越好
   - 主观质量评价指标
     - 绝对评价尺度
     - 相对评价尺度
 
 - 标准化
 
-  压缩标准JPEG、MPEG、H.26X
+  压缩标准 JPEG、MPEG、H.26X
 
 ##### 1.3 视频图像压缩发展历程
 
@@ -464,10 +464,10 @@
 
 ##### 2.1 游程编码
 
-- 原理：如果数据项d在输入流中出现n次，则以单个字符对nd替换n次出现者。这个连续出现的数据项叫做游程n，这种数据压缩方法称为游程编码或RLE
+- 原理：如果数据项 d 在输入流中出现 n 次，则以单个字符对 nd 替换 n 次出现者。这个连续出现的数据项叫做游程 n，这种数据压缩方法称为游程编码或 RLE
 - 需要特殊的提示字符
 
-##### <u> **2.2 熵编码** </u>
+##### <u>**2.2 熵编码**</u>
 
 - 熵：信息的度量
 - 变长码
@@ -477,23 +477,23 @@
 - 哈夫曼编码
   - 步骤
     1. 信源符号按概率分布大小，以递减次序排列
-    2. 取两个最小的概率，分别赋以0,1。然后把这两个概率值相加，作为新概率值与其他概率重新排序
-    3. 按重排概率值，重复（2）直到概率和达到1为止
+    2. 取两个最小的概率，分别赋以 0,1。然后把这两个概率值相加，作为新概率值与其他概率重新排序
+    3. 按重排概率值，重复（2）直到概率和达到 1 为止
     4. 由后向前排列码序，即得哈夫曼编码使用
   - 注意
     - 使用上放策略，码方差更小
     - 哈夫曼编码过程编出的最佳码不是唯一的，但其平均码长是一样的，其中码方差最小者最佳。因此在哈夫曼编码过程中，合并后的新符号应当排在其它相同概率符号的上面。
-  - D进制哈夫曼编码
-    - 每次合并D个符号
-    - 信源符号个数有要求，不符合要求的话需要补上概率为0的符号
+  - D 进制哈夫曼编码
+    - 每次合并 D 个符号
+    - 信源符号个数有要求，不符合要求的话需要补上概率为 0 的符号
 - 算术编码
-  - Huffman编码中每个符号都用整数个bits来表示，影响编码效率。 
+  - Huffman 编码中每个符号都用整数个 bits 来表示，影响编码效率。 
   - 若能把一串符号作为编码单位，则效率还可提高。
   - 算术编码不排序，按自然顺序从下往上排
   - 编码过程、解码过程
     - 新增字典第几项，等于第几次解码项加下一次解码的第一个字符
 
-##### <u> **2.3 字典编码** </u>
+##### 2.3 字典编码
 
 - 为了达到好的性能，需要知道信源的结构信息
   - 静态字典
@@ -533,13 +533,13 @@
     - 熵编码
     - 帧间预测编码
 
-##### **<u>3.1 预测编码</u>**
+##### 3.1 预测编码 
 
 - 帧间预测编码的运动估计
   - 运动估计：对两帧图像之间的运动位移进行估计
   - 运动补偿：根据估计得到的运动位移对图像进行对齐
   - 基于块的运动估计
-    - 将视频的每一帧分成许多互不重叠的宏块（16*16像素图像块）
+    - 将视频的每一帧分成许多互不重叠的宏块（16*16 像素图像块）
     - 对每个宏块到参考帧某一给定特定搜索范围内根据一定的匹配准则找出与当前块最相似的块，即匹配块
     - 匹配块与当前块的相对位移即为运动矢量，和残差数据均要写入压缩流
   - 运动估计全搜索算法
@@ -578,15 +578,15 @@
 
   - 帧间预测编码与帧类型
     - I 帧：不能进行帧间预测，只能进行帧内预测，基本选项
-    - P帧：可以进行前向帧间预测，基本选项
-    - B帧：可以进行双向帧间预测，高级选项
-    - 第一帧类型为I 帧，其他帧类型由人工设置参数决定
+    - P 帧：可以进行前向帧间预测，基本选项
+    - B 帧：可以进行双向帧间预测，高级选项
+    - 第一帧类型为 I 帧，其他帧类型由人工设置参数决定
   - 视频帧大小比较
     - I 帧：不能去除时间冗余，只能去除空间冗余
-    - P帧：可以去除时间冗余
-    - 一般情况：视频帧的时间冗余多于空间冗余，I帧数据量大于P帧
-    - 特殊情况：视频帧的时间和空间冗余均较多，I帧P帧数据量均较少
-  - 视频第一帧不应全部为P帧
+    - P 帧：可以去除时间冗余
+    - 一般情况：视频帧的时间冗余多于空间冗余，I 帧数据量大于 P 帧
+    - 特殊情况：视频帧的时间和空间冗余均较多，I 帧 P 帧数据量均较少
+  - 视频第一帧不应全部为 P 帧
     - 视频跳转播放
     - 终止误码传播
 
@@ -594,15 +594,15 @@
 
   - 视频宏块类型
 
-    - Intra宏块：进行帧内预测的16\*16像素图像块
-    - Inter宏块：进行帧间预测的16\*16像素图像块
+    - Intra 宏块：进行帧内预测的 16\*16 像素图像块
+    - Inter 宏块：进行帧间预测的 16\*16 像素图像块
 
   - 帧类型与宏块类型的关系
 
-    - I帧：所有宏块均为Intra宏块，不能进行帧间预测，只能进行帧内预测
-    - P帧：宏块可以为Inter宏块，进行帧间预测，也可以为Intra宏块，进行帧内预测
+    - I 帧：所有宏块均为 Intra 宏块，不能进行帧间预测，只能进行帧内预测
+    - P 帧：宏块可以为 Inter 宏块，进行帧间预测，也可以为 Intra 宏块，进行帧内预测
 
-  - P帧中宏块是Intra宏块的情况
+  - P 帧中宏块是 Intra 宏块的情况
 
     - 当前帧出现了前一帧未出现的新目标，新目标与前一帧没有时间相关性（出现新目标）
 
@@ -610,9 +610,9 @@
 
     - 当前帧内容自身过于简单相似，空间相关性太强（空间相关性强）
 
-    - 时间相关性越强，时间冗余越多，就应该Inter宏块类型
+    - 时间相关性越强，时间冗余越多，就应该 Inter 宏块类型
 
-      空间相关性越强，空间冗余越多，就应该Intra宏块类型
+      空间相关性越强，空间冗余越多，就应该 Intra 宏块类型
 
 #####  3.2 变换编码
 
@@ -639,7 +639,7 @@
   - 解码端：量化值 X 量化步长 ＝ 重建值
   - 加大量化步长，可以降低码率
 
-- 基于DCT 变换的分块量化导致失真
+- 基于 DCT 变换的分块量化导致失真
   - 块效应：变换编码是一种块结构编码方法，易出现块与块间的不连续性。
   - 蚊式噪声：看起来像某种围绕物体与背景之间高频分界(在前景物体与背景 之间形成的尖锐跳变)的朦胧的东西或闪光体。
 
@@ -655,7 +655,7 @@
 
   - 当前帧和运动补偿参考帧进行差值运算得到运动补偿的帧差图像。
 
-  - 对帧差图像进行DCT变换和量化。
+  - 对帧差图像进行 DCT 变换和量化。
 
   - 量化后的系数和运动矢量进行熵编码和传输。
 
@@ -677,9 +677,9 @@
 
 #### 4 视频图像编码标准
 
-- JPEG标准
-- MPEG-1编码
-- MPEG-4编码
+- JPEG 标准
+- MPEG-1 编码
+- MPEG-4 编码
 
 ### 第三章 语音音频压缩
 
@@ -722,24 +722,24 @@
 
 - 常用波形编码技术
 
-  - 脉冲编码调制PCM
+  - 脉冲编码调制 PCM
 
     - 非均匀量化方法
 
       先非线性变换，再均匀量化
 
-  - 差分脉冲编码调制DPCM
+  - 差分脉冲编码调制 DPCM
 
     - 用前面传输的若干抽样值来预测当前要传输的样值，然后对预测的误差而不是样值进行编码、传输。在接收端再用接收的预测误差来修正当前的预测值
-    - 预测器是通过n时刻之前的N个重建语音样点线性组合而成
+    - 预测器是通过 n 时刻之前的 N 个重建语音样点线性组合而成
 
-  - 自适应差分脉冲编码调制ADPCM
+  - 自适应差分脉冲编码调制 ADPCM
 
     - 自适应预测和自适应量化
 
-  - 子带ADPCM
+  - 子带 ADPCM
 
-    - 子带ADPCM原理：将信号分成多个子带，对各子带采用ADPCM编码
+    - 子带 ADPCM 原理：将信号分成多个子带，对各子带采用 ADPCM 编码
 
 ##### 2.2 参数编码
 
@@ -747,20 +747,20 @@
 
 - 语音产生数字模型
 
-  - 将清浊音判断、浊音的基音周期看做语音信号输入e(n)，增益系数G和时变数字滤波器系数{𝑎𝑖}看做声道滤波器参数
+  - 将清浊音判断、浊音的基音周期看做语音信号输入 e(n)，增益系数 G 和时变数字滤波器系数{𝑎𝑖}看做声道滤波器参数
 
 - 语音信号特征参数
 
   - 清浊音判别、基音周期参数提取方法
   - 线性预测原理——滤波器系数
 
-- 线性预测声码器LPC
+- 线性预测声码器 LPC
 
 - 对比
 
   - 波形编码
 
-    力图使重建音频波形保持原语音信号的波形形状，如PCM，质量好，码率高，16～64kbps
+    力图使重建音频波形保持原语音信号的波形形状，如 PCM，质量好，码率高，16～64kbps
 
   - 参数编码
 
@@ -768,7 +768,7 @@
 
   - 混合编码
 
-    既利用了语音的生成模型，减少了传输码率，又使解码的语音产生接近原始语音的波形，以保留说话人的自然特征在4～16kbps上获得高质量语音编码
+    既利用了语音的生成模型，减少了传输码率，又使解码的语音产生接近原始语音的波形，以保留说话人的自然特征在 4～16kbps 上获得高质量语音编码
 
   - 波形编码：码率高，质量好
 
@@ -791,7 +791,7 @@
 - 语音信号特点 + 线性预测合成模型
 
 - 技术：码本激励线性预测（CELP）算法
-- 声道参数：LPC参数
+- 声道参数：LPC 参数
 - ACELP：代数码本激励线性预测算法
 
 ##### 3.2 音频编码框架
@@ -816,35 +816,35 @@
 
 - 闭环模式选择
 
-  - 原理：对待编码信号采用ACELP和TVC分别编码，然后解码，计算解码信号的信噪比，取信噪比大者作为编码模式
-  - 优点：闭环模式采用SNR值计算，模式选择准确率最好。
+  - 原理：对待编码信号采用 ACELP 和 TVC 分别编码，然后解码，计算解码信号的信噪比，取信噪比大者作为编码模式
+  - 优点：闭环模式采用 SNR 值计算，模式选择准确率最好。
   - 缺点：由于是分析-合成方法决策，复杂度高
 
 - 开环模式选择
 
-  - 原理：采用信号分类算法，对待编码信号进行分类判决，若为语音信号，则采用ACELP编码方法；若为音乐信号，则采用TVC编码方法
+  - 原理：采用信号分类算法，对待编码信号进行分类判决，若为语音信号，则采用 ACELP 编码方法；若为音乐信号，则采用 TVC 编码方法
   - 优点：开环模式因避免分析-合成，可以大幅降低计算复杂度
-  - 缺点：相比闭环模式，准确率降低约15%~20%
+  - 缺点：相比闭环模式，准确率降低约 15%~20%
 
 - 通过长短重叠窗进行平滑衔接
 
 #### 4 语音音频编码标准
 
 - MPEG 中主要的语音频编码标准
-- MPEG标准——MPEG-1
-  - MP3是其三种压缩层次之一
-- ITU-T标准——G.711
+- MPEG 标准——MPEG-1
+  - MP3 是其三种压缩层次之一
+- ITU-T 标准——G.711
 
 #### 5 语音音频质量评价
 
 - 语音频质量评价因素
 
-  - 声音质量等级标准（4级）
+  - 声音质量等级标准（4 级）
 
-    - 数字激光唱盘CD-DA质量，其信号带宽为20Hz~20kHz
-    - 调频广播FM质量，其信号带宽为50Hz~15kHz
-    - 调幅广播AM质量，其信号带宽为80Hz~7kHz
-    - 电话的话音质量，其信号带宽为80Hz~3.4kHz
+    - 数字激光唱盘 CD-DA 质量，其信号带宽为 20Hz~20kHz
+    - 调频广播 FM 质量，其信号带宽为 50Hz~15kHz
+    - 调幅广播 AM 质量，其信号带宽为 80Hz~7kHz
+    - 电话的话音质量，其信号带宽为 80Hz~3.4kHz
 
   - 频率成分
 
@@ -855,7 +855,7 @@
   - 声音类别
 
     - 语音音质保真度主要体现在清晰、不失真、再现平面声象
-    - 乐音的保真度要求较高，营造空间声象主要体现在用多声道模拟立体环绕声，或虚拟双声道3D环绕声等方法，再现原来声源的一切声象。
+    - 乐音的保真度要求较高，营造空间声象主要体现在用多声道模拟立体环绕声，或虚拟双声道 3D 环绕声等方法，再现原来声源的一切声象。
 
   - 音频信号用途不同，压缩质量标准不同
 
@@ -882,7 +882,7 @@
 
   - 和差立体声编码（M/S）
   - 强度立体声编码
-    - 利用了人耳对高频信号（1.6kHz以上）的频谱包络敏感而对频谱细节不敏感特性，仅限于高频段使用，对低频段使用会严重影响立体声效果
+    - 利用了人耳对高频信号（1.6kHz 以上）的频谱包络敏感而对频谱细节不敏感特性，仅限于高频段使用，对低频段使用会严重影响立体声效果
 
 - 多声道编码
 
@@ -906,7 +906,7 @@
 
       - 垂直定位
 
-        - 与耳廓相关的信号高频（大于5KHz）频谱线索(频响中波峰和波谷出现的位置)是人耳对声源垂直定位的依据
+        - 与耳廓相关的信号高频（大于 5KHz）频谱线索(频响中波峰和波谷出现的位置)是人耳对声源垂直定位的依据
 
       - 距离
   
@@ -928,9 +928,9 @@
     - VBAP
     - NHK 22.2
 - 耳机回放的三维音频系统
-  - 我们将声源S到达双耳的过程看做一个滤波的过程，若知道滤波器我们就可以虚拟合成出该空间位置的声音，用耳机播放出来即可
+  - 我们将声源 S 到达双耳的过程看做一个滤波的过程，若知道滤波器我们就可以虚拟合成出该空间位置的声音，用耳机播放出来即可
   - 头相关传输函数（HRTF）
-  - HRTF个性化生成技术
+  - HRTF 个性化生成技术
   - 客观评估
   - 主观评价
 
@@ -980,7 +980,7 @@
 
 ##### 1.2 多媒体通信系统
 
-- IP网络电话（VoIP）
+- IP 网络电话（VoIP）
   - 优缺点
   - 质量影响因素
       - 压缩算法
@@ -1008,7 +1008,7 @@
     - 视频数据压缩
 
 - 视频会议系统
-  - H.323协议概述
+  - H.323 协议概述
 
 
 #### 2 流媒体技术
@@ -1018,10 +1018,10 @@
 - 流式传输方法
     - 顺序流
       - 定义：顺序下载，在下载文件的同时用户可观看再线媒体，在给定时刻，用户只能观看已下载的那部分，不能跳到还未下载的前头部分
-      - 优点：标准的HTTP服务器可发送文件，不需要其他特殊协议；比较合适高质量的片段，这种方法保证电影播放的最终质量
+      - 优点：标准的 HTTP 服务器可发送文件，不需要其他特殊协议；比较合适高质量的片段，这种方法保证电影播放的最终质量
       - 缺点：本质上是一种点播，用户在观看前，必须经历延时，对比较慢的连接尤其如此
     - 实时流
-      - 定义：一般说来，如视频为实时广播，或使用流传输媒体服务器，或应用如RTSP的实时协议，即为实时流传输
+      - 定义：一般说来，如视频为实时广播，或使用流传输媒体服务器，或应用如 RTSP 的实时协议，即为实时流传输
       - 优点：实时流传输保证媒体信号带宽与网络连接匹配，使媒体可被实时观看到，适合视频直播
       - 缺点：实时流传输与顺序流传输不同，需要专用的流媒体服务器与传输协议；必须匹配连接带宽，网络拥挤或出现问题时，视频质量很差
 - 流式传输基本原理
@@ -1071,7 +1071,7 @@
     - 渐变镜头切换（双重比较法）
     - 双重比较法：是指采用两个阀值。首先用第一个较低的阀值来确定出潜在渐变切换序列的起始帧。一旦确定了这个帧，就将它与后续的帧进行比较，用得到的差值来取代帧间的差值。这个差值必须是单调的，应该不断地加大，直至这个单调的过程中止。这时，将这个差值与第二个较大的阀值进行比较，如果超过了这个阀值，就认为这个不断比较差值单调的视频序列对应的就是一个渐变切换点
   - 视频结构重构
-- 多媒体内容描述接口MPEG-7 
+- 多媒体内容描述接口 MPEG-7 
 
 #### 3 图像分割
 
@@ -1087,7 +1087,7 @@
   - 基于人工交互的语义分割
   - 基于图论的图像分割
   - 基于样本学习的语义分割
-  - 基于全卷积网络FCN的语义分割
+  - 基于全卷积网络 FCN 的语义分割
 
 #### 4 目标检测
 
@@ -1122,7 +1122,7 @@
 目标跟踪是指从一段连续的图像序列或视频中估计出感兴趣目标的运动状态和运动轨迹
 
 - 经典跟踪算法
-  - Meanshift算法
+  - Meanshift 算法
   - 相关滤波跟踪
   - 相机移动、变焦等
   - 背景复杂
@@ -1136,7 +1136,7 @@
   - 相机移动、变焦等
   - 背景复杂
 - Bag of Word
-- HOG特征表达
+- HOG 特征表达
 
 - 卷积神经网络
 - 基于深度网络的行为识别
@@ -1157,7 +1157,7 @@
 
 - 多媒体数据压缩的性能评价指标
 
-- 简答ADPCM的基本思想
+- 简答 ADPCM 的基本思想
 
 - 波形、参数、感知三种编码技术的优缺点
 
@@ -1168,13 +1168,13 @@
 
 - 哈夫曼编码
 
-- LZW字典编码
+- LZW 字典编码
 - 算术编码
 
 ### 简述题
 
 - 视频编码器的基本框架
-- JPEG编码的基本过程
+- JPEG 编码的基本过程
 - 语音编码非均匀量化
 - 可视电话软件实现的基本过程
 - 深度学习在多媒体技术领域的应用及其面临的挑战
@@ -1188,45 +1188,45 @@
 
 ## 总结
 
-### **<u>人眼的视觉特性在视频图像压缩中的运用</u>**
+### 人眼的视觉特性在视频图像压缩中的运用
 
 - YUV
   - 人类视觉系统（HVS）对亮度比对彩色敏感
 - 量化编码
   - 人眼对高频表示的细节部分敏感度不如低频高
 - 帧率
-  - 25帧左右的视频就可以形成连续的视频了
+  - 25 帧左右的视频就可以形成连续的视频了
 - 块效应滤波（？？）
 - 假纹理
   - 水波、草地等纹理可以自动生成，人眼的区分能力不足
 - 视觉关注度
-  - ROI编码。人眼的关注范围有限，对不重要的目标可以增大压缩率。
+  - ROI 编码。人眼的关注范围有限，对不重要的目标可以增大压缩率。
 - 降低量化级数
   - 人眼对量化级数（颜色数）的变化不敏感
 
-### **<u>人的发声特性和听觉特性在语音音频压缩中的运用</u>**
+### 人的发声特性和听觉特性在语音音频压缩中的运用
 
 - 发声特性
   - 清浊音的周期特性不同，浊音有周期性，清音没有
   - 语音短时平稳性
     - 人在说话时，声道形状会随口腔肌肉运动而进行相应变化，肌肉运动频率相对于语音变化频率而言要相对缓慢，在一个短时间间隔（20～40ms）内，可以认为声道及其输入是近似平稳的
-    - 语音信号分析帧：假设语音信号短时平稳，为便于语音信号处理，会将语音信号进行分帧处理，语音信号的处理帧长为20ms
+    - 语音信号分析帧：假设语音信号短时平稳，为便于语音信号处理，会将语音信号进行分帧处理，语音信号的处理帧长为 20ms
 - 听觉特性
   - 人耳的频率—位置的映射
-    - 子带ADPCM
+    - 子带 ADPCM
   - 闻域曲线
     - 感知编码
   - 听觉掩蔽
     - 感知编码
     - 语音特性修正策略
 
-### **<u>哈夫曼编码的写法</u>**
+### 哈夫曼编码的写法
 
 
 
-### **<u>算术编码的写法</u>**
+### 算术编码的写法
 
-### **<u>视频冗余和压缩方法</u>**
+### 视频冗余和压缩方法
 
 - 视频压缩的基本依据
   - 空间冗余
