--- a/docs/course/Photogrammetry/数字摄影测量.md
+++ b/docs/course/Photogrammetry/数字摄影测量.md
@@ -29,7 +29,7 @@
 
   - 航空倾斜摄影技术
 
-    航空倾斜摄影技术不同于传统的从单一垂直角度进行拍摄的航空摄影模式，而是在一个飞行平台上同时搭载多个各成角度的感光器件，分别从垂直角度和倾斜布设的CCD传感器获取 地面多方向的立体图像信息，配合机身携带的高精度导航卫星定位接收机和惯性测量单元（IMU），航摄仪所拍摄图像的绝对位置可以通过地理参考直接计算获得，避免了传统空中三角测量的后处理工作。通过结合倾斜与垂直航拍获取的相片，倾斜摄影技术能获得更立体的地理和环境信息，大大提高地表特征的航摄解译和三维模型生产效率，广泛应用于如实景三维建模、智慧城市等方面。
+    航空倾斜摄影技术不同于传统的从单一垂直角度进行拍摄的航空摄影模式，而是在一个飞行平台上同时搭载多个各成角度的感光器件，分别从垂直角度和倾斜布设的 CCD 传感器获取 地面多方向的立体图像信息，配合机身携带的高精度导航卫星定位接收机和惯性测量单元（IMU），航摄仪所拍摄图像的绝对位置可以通过地理参考直接计算获得，避免了传统空中三角测量的后处理工作。通过结合倾斜与垂直航拍获取的相片，倾斜摄影技术能获得更立体的地理和环境信息，大大提高地表特征的航摄解译和三维模型生产效率，广泛应用于如实景三维建模、智慧城市等方面。
 
   - 贴近摄影测量
 
@@ -72,13 +72,13 @@
 
   - 采样定理
 
-    - 当采样间隔能使在函数g(x)中存在的最高频率中每周期取有两个样本时，则根据采样数据可以完全恢复原函数 g(x)
+    - 当采样间隔能使在函数 g(x)中存在的最高频率中每周期取有两个样本时，则根据采样数据可以完全恢复原函数 g(x)
 
-    - 实际上由于原来的影像中有噪声以及采样光点不可能是一个理想的光点，还会产生混淆和其他的复杂现象，因此噪音部分应在采样以前滤掉，并且采样间隔最好是使在原函数中存在的最高频率每周期至少取有3个样本。
+    - 实际上由于原来的影像中有噪声以及采样光点不可能是一个理想的光点，还会产生混淆和其他的复杂现象，因此噪音部分应在采样以前滤掉，并且采样间隔最好是使在原函数中存在的最高频率每周期至少取有 3 个样本。
 
 - 影像重采样理论
 
-  - 当欲知不位于矩阵（采样）点上的原始函数g(x,y)的数值时就需进行内插，称为重采样
+  - 当欲知不位于矩阵（采样）点上的原始函数 g(x,y)的数值时就需进行内插，称为重采样
 
   - 三种重采样方法
 
@@ -92,14 +92,14 @@
 
     - 最邻近像元法
 
-      直接取与P(x,y)点位置最近像元N的 灰质值为核点的灰 度作为采样值
+      直接取与 P(x,y)点位置最近像元 N 的 灰质值为核点的灰 度作为采样值
 
   - 比较
     - 最邻近像元法最简单，计算速度快，且能不破坏原始影像的灰度信息, 但几何精度较差。
     - 双三次卷积法较费时。（考虑灰度连续性、考虑梯度连续性，耗时较多）
     - 双线性插值法较宜。（考虑灰度连续性、未考虑梯度连续性，耗时不大，较适宜）
 
-#### <u> **2 同名核线的确定与重采样** </u>
+#### <u>**2 同名核线的确定与重采样**</u>
 
 - 通过摄影基线与地面所作的平面称为核面。
 
@@ -115,7 +115,7 @@
 
   - 在“水平”影像上获取核线影像
 
-    “水平”指与摄影基线平行。取V=C即表示某一核线。在“水平”影像上等间距选点，计算其在倾斜影像上的坐标。
+    “水平”指与摄影基线平行。取 V=C 即表示某一核线。在“水平”影像上等间距选点，计算其在倾斜影像上的坐标。
 
     
 
@@ -125,7 +125,7 @@
 
   - 同名核线的确定
 
-    同名核线的v坐标值相等
+    同名核线的 v 坐标值相等
 
     
 
@@ -155,13 +155,13 @@
 
     - 线性内插
 
-      只需要在y方向上进行内插
+      只需要在 y 方向上进行内插
 
     - 邻近点法
 
       根据核线的斜率是定值，可以计算一个图像行要连续取多少个像元。
 
-#### <u> **3 点特征提取算法** </u>
+#### <u>**3 点特征提取算法**</u>
 
 - 点特征
 
@@ -175,9 +175,9 @@
 
 - 点特征的灰度特征
 
-- <u> **Moravec算子** </u>
+- <u>**Moravec 算子**</u>
 
-  利用灰度方差提取点特征的算子， **最大-最小灰度方差** 
+  利用灰度方差提取点特征的算子，**最大-最小灰度方差**
 
   - 计算各像元的兴趣值 *IV* 
 
@@ -187,29 +187,29 @@
 
   - 选取候选点中的极值点作为特征点
 
-    Moravec算子是在四个主要方向上选择具有最大-最小灰度方差的点作为特征点。
+    Moravec 算子是在四个主要方向上选择具有最大-最小灰度方差的点作为特征点。
 
-- **<u>Forstner算子</u>**
+- **<u>Forstner 算子</u>**
 
-  Robert’s梯度和灰度协方差矩阵，寻找具有尽可能小而接近圆的误差椭圆的点作为特征点。
+  Robert’s 梯度和灰度协方差矩阵，寻找具有尽可能小而接近圆的误差椭圆的点作为特征点。
 
   点位误差的概念：待定点的点位精度通常用点位中误差来描述，与坐标系选择无关， 是一个平均量。
 
   误差曲线、误差椭圆
 
-  - 计算各像素的Robert’s梯度
+  - 计算各像素的 Robert’s 梯度
 
     
 
-  - 计算l×l（如5×5或更大）窗口中灰度的协方差矩阵
+  - 计算 l×l（如 5×5 或更大）窗口中灰度的协方差矩阵
 
     
 
-  - 计算兴趣值q与w
+  - 计算兴趣值 q 与 w
 
     
 
-    q即像素（c,r）对应误差椭圆的圆度。w为该像元的权
+    q 即像素（c,r）对应误差椭圆的圆度。w 为该像元的权
 
   - 确定待定点
 
@@ -219,31 +219,31 @@
 
     即在一个适当窗口中选择最大的待选点。
 
-    由于Forstner算子较复杂，可首先用一简单的差分算子提取初选点，然后采用Forstner算子在3×3窗口计算兴趣值，并选择备选点最后提取的极值点为特征点。
+    由于 Forstner 算子较复杂，可首先用一简单的差分算子提取初选点，然后采用 Forstner 算子在 3×3 窗口计算兴趣值，并选择备选点最后提取的极值点为特征点。
 
-- **<u>基于Harris算子的点特征提取算法</u>**
+- **<u>基于 Harris 算子的点特征提取算法</u>**
 
-  自相关函数相联系的矩阵M,M阵的特征值是自相关函数的一阶曲率，如果两个曲率值都高，则认为该点是点特征。
+  自相关函数相联系的矩阵 M,M 阵的特征值是自相关函数的一阶曲率，如果两个曲率值都高，则认为该点是点特征。
 
   
 
-  设$\lambda_1,\lambda_2$是M的两个特征值，$\lambda_1,\lambda_2$局部自相关函数的主曲率成比例。可以通过判断$\lambda_1,\lambda_2$的值的情况来判断平坦区、角点和边沿，有以下3种情况。
+  设$\lambda_1,\lambda_2$是 M 的两个特征值，$\lambda_1,\lambda_2$局部自相关函数的主曲率成比例。可以通过判断$\lambda_1,\lambda_2$的值的情况来判断平坦区、角点和边沿，有以下 3 种情况。
 
   
 
   其计算过程如下
 
-  - 首先确定一个n乘n大小的影像窗口，对窗口内的每一个像素点进行一阶差分运算，求得在xy方向的梯度
-  - 对梯度值进行高斯滤波，高斯卷积模板sigma取0.3到0.9
-  - 根据公式，计算强度值M
+  - 首先确定一个 n 乘 n 大小的影像窗口，对窗口内的每一个像素点进行一阶差分运算，求得在 xy 方向的梯度
+  - 对梯度值进行高斯滤波，高斯卷积模板 sigma 取 0.3 到 0.9
+  - 根据公式，计算强度值 M
   - 选取局部极值点，在窗口内取最大值。
 
   
 
-  Harris算法的优缺点
+  Harris 算法的优缺点
 
   - 优点：
-    - 计算简单，只是用到灰度的一阶差分（算法优劣2个判据）
+    - 计算简单，只是用到灰度的一阶差分（算法优劣 2 个判据）
     - 提取的特征点均匀分布合理
     - 可以定量的提取特征点
     - 算法稳定
@@ -251,9 +251,9 @@
     - 对尺度变化敏感。
     - 检测速度较慢
   
-- SUSAN算法（Smallest Univalue Segment Assimilating Nucleus，即同化核分割最小值）
+- SUSAN 算法（Smallest Univalue Segment Assimilating Nucleus，即同化核分割最小值）
 
-  掩膜核及掩膜完全包含在图像中时，USAN的值最大；当模板移向图像边缘时，USAN区域逐渐变小，掩膜核在图像的一条直线边缘附近时，USAN值接近其最大值的一半；掩膜核在图像的一个角点处 ，USAN值接近最大值的1/4。搜索图像角点或边缘点，就是搜索USAN最小的点
+  掩膜核及掩膜完全包含在图像中时，USAN 的值最大；当模板移向图像边缘时，USAN 区域逐渐变小，掩膜核在图像的一条直线边缘附近时，USAN 值接近其最大值的一半；掩膜核在图像的一个角点处 ，USAN 值接近最大值的 1/4。搜索图像角点或边缘点，就是搜索 USAN 最小的点
 
   
 
@@ -271,25 +271,25 @@
 
   - 梯度算子
 
-    x,y方向得到的梯度模长
+    x,y 方向得到的梯度模长
 
   - 差分算子
 
-    x,y方向差值绝对值之和
+    x,y 方向差值绝对值之和
 
-  - Roberts梯度算子
+  - Roberts 梯度算子
 
     对角方向得到的梯度模长
 
   - 方向差分算子
 
-  - Sobel算子
+  - Sobel 算子
 
-    考察它上下、左右邻点灰度的加权差，与之接近的邻点的权大。相当于比Prewitt算子多了平滑过程。
+    考察它上下、左右邻点灰度的加权差，与之接近的邻点的权大。相当于比 Prewitt 算子多了平滑过程。
 
-  - Prewitt算子
+  - Prewitt 算子
 
-  - Canny算子
+  - Canny 算子
 
     利用高斯函数对图像进行低通滤波；然后对图像中的每个像素进行处理，寻找边缘的位置及在该位置的边缘法向，并采用一种“非极大抑制”的技术在边缘法向寻找局部最大值；最后对边缘图像做滞后阈值化处理，消除虚假响应。
 
@@ -312,12 +312,12 @@
     - 低通滤波
     - 边缘提取
 
-- Hough变换
+- Hough 变换
 
   用于检测图像中直线、圆、抛物线、椭圆等
 
   - 提取特征并计算其梯度方向
-  - 设置累计矩阵H
+  - 设置累计矩阵 H
   - 边缘细化
   - 设置一小区间
   - 将大于阈值的点作为备选点
@@ -331,7 +331,7 @@
 
 #### 5 定位算子
 
-- Wong-Trinder圆点定位算子
+- Wong-Trinder 圆点定位算子
 
   - 利用二值图像重心对圆点进行定位
 
@@ -339,21 +339,21 @@
 
   - 利用矩计算目标重心坐标(x,y)与圆度
 
-- Trinder改进算子
+- Trinder 改进算子
 
   - 以原始灰度为权，误差可变小。
 
-- Forstner定位算子
+- Forstner 定位算子
 
-  Forstner定位算子分 **最佳窗口选择** 与 **最佳窗口内加权重心化** 两步进行。其速度快、精度较高。
+  Forstner 定位算子分**最佳窗口选择**与**最佳窗口内加权重心化**两步进行。其速度快、精度较高。
 
-  最佳窗口选择由Forstner特征提取算子确定。然后以原点到窗口内边缘直线的距离为观测值，梯度模之平方为权，在点(x,y)处列误差方程。由最小二乘平差可解得角点坐标。
+  最佳窗口选择由 Forstner 特征提取算子确定。然后以原点到窗口内边缘直线的距离为观测值，梯度模之平方为权，在点(x,y)处列误差方程。由最小二乘平差可解得角点坐标。
 
 - 高精度角点与直线定位算子
 
   边缘法线方向位置与灰度的关系
 
-  - 初值确定：Hough变换确定直线参数初值
+  - 初值确定：Hough 变换确定直线参数初值
   - 粗差的剔除：采用选权迭代法，使粗差在平差的过程中自动地被逐渐剔除
   - 窗口的选择：精确定位窗口在粗定位矩形窗口中确定
   - 角点定位
@@ -364,7 +364,7 @@
 
 摄影测量将摄影的影像形成“一张图”成果。几乎所有的几何处理都离不开影像匹配，它是自动空中三角测量和自动生成数字表面模型（DSM）的基础。
 
-#### **<u>1 影像相关的基本原理</u>**
+#### 1 影像相关的基本原理
 
 - 相关原理
 
@@ -392,7 +392,7 @@
     - $S(f)$较平缓，高频信息较丰富，相关函数$R(\tau)$较陡峭，相关精度高，拉入范围较小，出错率高
     - $S(f)$较陡峭，低频信息占优势，相关函数$R(\tau)$较平缓，相关精度较差，拉入范围较大，出错率低
 
-- **<u>金字塔影像相关</u>**
+- 金字塔影像相关
 
   - 通过相关函数的谱分析可知，当信号中高频成分较少时，相关函数曲线较平缓，但相关的拉入范围较大；反之，当高频成分较多时，相关函数曲线较陡，相关精度较高，但相关拉入范围较小。
 
@@ -403,11 +403,11 @@
 
 - 金字塔影像的建立
 
-  - 每n×n个像元平均为一个像元构成第二级影像，然后在第二级影像的基础上构成第三级影像。主要有四像元平均和九像元平均。
+  - 每 n×n 个像元平均为一个像元构成第二级影像，然后在第二级影像的基础上构成第三级影像。主要有四像元平均和九像元平均。
 
   - 金字塔影像层的确定方法
 
-    原始影像称第零层，第一层影像每一像素相当于零层$（l\times l）^1$个像素，第k层影像每一像素相当于零层的$（l\times l）^k$个像素。
+    原始影像称第零层，第一层影像每一像素相当于零层$（l\times l）^1$个像素，第 k 层影像每一像素相当于零层的$（l\times l）^k$个像素。
 
     - 由影像匹配窗口大小确定金字塔影像层数
 
@@ -417,7 +417,7 @@
 
     - 由先验视差确定金字塔影像层数
 
-      S是搜索像素，$\Delta$是像素大小。要保证最上层的最大左右视差与左右搜索的距离相等
+      S 是搜索像素，$\Delta$是像素大小。要保证最上层的最大左右视差与左右搜索的距离相等
 
       
 
@@ -439,9 +439,9 @@
 
   - 差绝对值和（差矢量分量绝对值和）
 
-- <u> **基于物方的影像匹配（VLL法）** </u>
+- 基于物方的影像匹配（VLL 法）
 
-  影像匹配的目的是提取物体的几何信息，确定其空间位置。因而在由前面所述的影像匹配方法获取左右影像的位移（视差）后，还要利用空间前方交会解算其对应的物点的空间三维坐标，然后建立数字表面模型（如数字地面模型DTM）。在建立数字表面模型时可能还会使用一定的内插方法，使得精度或多或少地降低。
+  影像匹配的目的是提取物体的几何信息，确定其空间位置。因而在由前面所述的影像匹配方法获取左右影像的位移（视差）后，还要利用空间前方交会解算其对应的物点的空间三维坐标，然后建立数字表面模型（如数字地面模型 DTM）。在建立数字表面模型时可能还会使用一定的内插方法，使得精度或多或少地降低。
 
   能够直接确定物体表面点空间三维坐标的基于物方的影像匹配方法被称为”地面元影像匹配” 。此时待定点的平面坐标是已知的，只需要确定其高程。因而基于物方的影像匹配也可以理解为高程直接解求的影像匹配方法。
 
@@ -454,20 +454,20 @@
     - 给定地面点的平面坐标$(X，Y)$与近似最低高程$Z_{min}$。$Z_i＝Z_{min}＋i\cdot \Delta Z$高程搜索步距$\Delta Z$可由所要求的高程精度确定。
     - 由地面点平面坐标$(X，Y)$与可能的高程。$Z_i＝Z_{min}＋i\cdot \Delta Z$。计算左、右影像坐标$(x^\prime_i,y^\prime_i)$与$(x^{\prime\prime}_i,y^{\prime\prime}_i)$。
     - 分别以$(x^\prime_i,y^\prime_i)$与$(x^{\prime\prime}_i,y^{\prime\prime}_i)$为中心在左右影像上取影像窗口，计算其匹配测度。
-    - 将$i$的值增加1，重复（2），（3）两步，得到$\rho_0,\rho_1,\rho_2,\cdots\rho_n$取其最大者$\rho_k$。
-    - 利用$\rho_k$及其相邻的几个相关系数拟合一抛物线，以其极值对应的高程作为A点的高程。
+    - 将$i$的值增加 1，重复（2），（3）两步，得到$\rho_0,\rho_1,\rho_2,\cdots\rho_n$取其最大者$\rho_k$。
+    - 利用$\rho_k$及其相邻的几个相关系数拟合一抛物线，以其极值对应的高程作为 A 点的高程。
 
   - 实际中，影像窗口形状不一定相同，需要进行仿射变换重采样。匹配是从像方的特征点出发，以避免地面点是非特征点的情况，并且是沿光线而不是铅垂线逐高程计算的，
 
 - 影像匹配精度
 
-  影像匹配（相关）即使在定位到整像素的情况下，其理论精度也可达到大约0.3像素的精度。 
+  影像匹配（相关）即使在定位到整像素的情况下，其理论精度也可达到大约 0.3 像素的精度。 
 
-  用相关系数的抛物线拟合提高相关精度，可使相关精度达到0.15-0.2子像素精度。
+  用相关系数的抛物线拟合提高相关精度，可使相关精度达到 0.15-0.2 子像素精度。
 
-#### <u> **4 最小二乘法影像匹配** </u>
+#### 4 最小二乘法影像匹配
 
-影像匹配可达到1/10甚至1/100像素的高精度。
+影像匹配可达到 1/10 甚至 1/100 像素的高精度。
 
 - 最小二乘影像匹配原理
 
@@ -599,13 +599,13 @@
       - 几何改正，重采样
       - 相关
 
-- SIFT算子
+- SIFT 算子
 
   - 特点
-    - SIFT特征是图像的局部特征，其对旋转、尺度缩放、亮度变化保持不变性，对视角变化、仿射变换、噪声也保持一定程度的稳定性； 
+    - SIFT 特征是图像的局部特征，其对旋转、尺度缩放、亮度变化保持不变性，对视角变化、仿射变换、噪声也保持一定程度的稳定性； 
     - 独特性好，信息量丰富，适用于在海量特征数据库中进行快速、准确的匹配 ；
-    - 多量性，即使少数的几个物体也可以产生大量SIFT特征向量；
-    - 高速性，经优化的SIFT匹配算法甚至可以达到实时的要求； 
+    - 多量性，即使少数的几个物体也可以产生大量 SIFT 特征向量；
+    - 高速性，经优化的 SIFT 匹配算法甚至可以达到实时的要求； 
     - 可扩展性，可以很方便的与其他形式的特征向量进行联合；
 
   主要步骤
@@ -624,25 +624,25 @@
 
         
 
-    - DOG算子
+    - DOG 算子
 
       DOG.算子的计算效率高； 
 
-      高斯差分函数是比例尺归一化的“高斯－拉普拉斯函数”（LOG算子）的近似。其为为最小和最大时，影像上能够产生大量、稳定的特征点，并且特征点的数量和稳定性比其它的特征提取算子（如Hessian算子、Harris算子）要多得多、稳定得多。
+      高斯差分函数是比例尺归一化的“高斯－拉普拉斯函数”（LOG 算子）的近似。其为为最小和最大时，影像上能够产生大量、稳定的特征点，并且特征点的数量和稳定性比其它的特征提取算子（如 Hessian 算子、Harris 算子）要多得多、稳定得多。
 
     - 高斯差分尺度空间的生成
 
-      - 在第一层尺度空间中，利用$\sigma\cdot 2^{n/2}$卷积核分别对原始影像进行高斯卷积，生成高斯金字塔影像(S+3张)，其中n为高斯金字塔影像的索引号( 0,1,2... S+2), S为该层尺度空间的子层数。
+      - 在第一层尺度空间中，利用$\sigma\cdot 2^{n/2}$卷积核分别对原始影像进行高斯卷积，生成高斯金字塔影像(S+3 张)，其中 n 为高斯金字塔影像的索引号( 0,1,2... S+2), S 为该层尺度空间的子层数。
       - 将第一层尺度空间中的相邻高斯金字塔影像相减，生成高斯差分金字塔影像
-      - 不断地将原始影像降采样2倍，并重复类似1)和2)的步骤，生成下一层尺度空间。
+      - 不断地将原始影像降采样 2 倍，并重复类似 1)和 2)的步骤，生成下一层尺度空间。
 
-      > 当尺度空间子层数S=3时，提取的极值点具有最好的重复性
+      > 当尺度空间子层数 S=3 时，提取的极值点具有最好的重复性
       >
       > 随着$\sigma$值的增大，提取的极值点的重复性也逐渐增大，当$\sigma=1.6$时最佳
 
       - 局部极值探测
 
-        每个采样点与它所在的同一层比例尺空间的周围8个相邻点和相邻上、下比例尺空间中相应位置上的9x2个相邻点进行比较
+        每个采样点与它所在的同一层比例尺空间的周围 8 个相邻点和相邻上、下比例尺空间中相应位置上的 9x2 个相邻点进行比较
 
   - 关键点的精确定位
 
@@ -664,11 +664,11 @@
 
     - 将坐标轴旋转到关键点的主方向，只有以主方向为零点方向来描述关键点才能使其具有旋转不变性。
 
-    - 然后以关键点为中心取8×8窗口
+    - 然后以关键点为中心取 8×8 窗口
 
       
 
-    - 为了增强匹配的稳健性，Lowe建议对每个关键点使用4×4共16个种子点来描述，这样对于每个关键点就可以产生128维的向量,即SIFT特征向量。
+    - 为了增强匹配的稳健性，Lowe 建议对每个关键点使用 4×4 共 16 个种子点来描述，这样对于每个关键点就可以产生 128 维的向量,即 SIFT 特征向量。
 
       
 
@@ -692,9 +692,9 @@
 
 - 半全局匹配
 
-  - SGM能量函数
+  - SGM 能量函数
     - 第一项为数据项(data term)，对应为匹配代价；
-    - 后两项为光滑约束项(smoothness term)，其中第二项表示邻域视差变化值为1时惩罚值为P1 ，第三项表示当邻域视差变化超过1时惩罚值为P2，P1 << P2
+    - 后两项为光滑约束项(smoothness term)，其中第二项表示邻域视差变化值为 1 时惩罚值为 P1 ，第三项表示当邻域视差变化超过 1 时惩罚值为 P2，P1 << P2
 
 
 ### 第七章 数字地面模型的建立与应用
@@ -703,33 +703,33 @@
 
 - 数字地面模型的发展过程
 
-  - 不同的学科中的DTM不同，而测绘学一般将以高程数据为主的地形几何要素作为了 DTM 的内容，一般称为数字高程模型（Digital Elevaion Model，简称DEM）。
+  - 不同的学科中的 DTM 不同，而测绘学一般将以高程数据为主的地形几何要素作为了 DTM 的内容，一般称为数字高程模型（Digital Elevaion Model，简称 DEM）。
 
   - 地理信息系统将各种地理信息的空间分布和属性结合起来进行管理和应用，它的数字地面模型包含地形特征信息以及其它信息。
 
 - 数字地面模型的概念及其形式
 
-  - 地形表面形态等多种信息的一个数字表示。DTM是定义在某一区域D上的m维向量有限序列。
+  - 地形表面形态等多种信息的一个数字表示。DTM 是定义在某一区域 D 上的 m 维向量有限序列。
 
-  - 数字高程模型DEM（Digital Elevation  Model）或 DHM(Digital Height Model) 是表示区域D上地形的三维向量有限序列。
+  - 数字高程模型 DEM（Digital Elevation  Model）或 DHM(Digital Height Model) 是表示区域 D 上地形的三维向量有限序列。
 
-- 数字高程模型DEM表示形式
+- 数字高程模型 DEM 表示形式
 
   - 规则矩形格网
 
-    存贮量小，便于使用，容易管理，有时不能准确表示地形的结构与细部，因此基于DEM描绘的等高线不能准确地表示地貌。
+    存贮量小，便于使用，容易管理，有时不能准确表示地形的结构与细部，因此基于 DEM 描绘的等高线不能准确地表示地貌。
 
-  - 不规则三角网TIN
+  - 不规则三角网 TIN
 
     能较好地顾及地貌特征点、线，表示复杂地形表面比矩形格网精确。数据量大，数据结构复杂，使用和管理也较复杂。
 
-  - Grid-TIN混合网
+  - Grid-TIN 混合网
 
-    充分利用了规则矩形格网与不规则三角网DEM的优点，数据结构复杂
+    充分利用了规则矩形格网与不规则三角网 DEM 的优点，数据结构复杂
 
 #### 2 数字高程模型的数据获取及预处理
 
-- DEM数据点的采集方法
+- DEM 数据点的采集方法
 
   - 地面测量：利用自动记录的测距经纬仪在野外实测
 
@@ -737,7 +737,7 @@
 
   - 空间传感器：激光测高仪、合成孔径雷达系统
 
-- 数字摄影测量的DEM数据采集方式
+- 数字摄影测量的 DEM 数据采集方式
 
   - 沿等高线采样
   - 规则格网采样
@@ -748,15 +748,15 @@
 
   - 选择采样：根据地形特征进行选择采样
   - 混合采样：将规则采样与选择采样结合起来进行
-  - 自动化DEM数据采集：按影像上的规则格网利用数字影像匹配进行数据采集。
+  - 自动化 DEM 数据采集：按影像上的规则格网利用数字影像匹配进行数据采集。
 
-- DEM数据预处理
+- DEM 数据预处理
 
   - 数据分块方法
     - 交换法：同一块地址连续，存放在一起。
     - 链指针法：对于每一数据点，增加一存贮单元，存放属于同一个分块格网中下一个点在数据文件中的序号
 
-#### **<u>3 数字高程模型的内插方法</u>**
+#### 3 数字高程模型的内插方法
 
 - 移动曲面拟合法
 
@@ -780,8 +780,8 @@
 
   - 注意事项
 
-    - 除满足n＞6，保证各象限都有数据点; 
-    - 当地形起伏较大时，半径R不能取很大; 
+    - 除满足 n＞6，保证各象限都有数据点; 
+    - 当地形起伏较大时，半径 R 不能取很大; 
     - 当数据点较稀或分布不均匀时，可能产生很大的误差;
 
   - 加权平均水平面移动拟合法
@@ -810,7 +810,7 @@
 
   - 多面函数法解算
 
-    m=n时，a可以简化
+    m=n 时，a 可以简化
 
     
 
@@ -818,7 +818,7 @@
 
   为了解算一个函数，把它分成为许多适当大小的“单元”，在每一单元中用一个简单的函数，例如多项式来近似地代表它。
 
-  - 一次样条有限元DEM内插
+  - 一次样条有限元 DEM 内插
 
     
 
@@ -830,7 +830,7 @@
 
     - 
 
-    - 保证地面的圆滑，可利用X和Y方向上的二次差分条件
+    - 保证地面的圆滑，可利用 X 和 Y 方向上的二次差分条件
 
       
 
@@ -838,7 +838,7 @@
 
     - 作线性内插
 
-      为了突出断裂线所显示的特征，可在原始采集的数据点的基础上作线性内插，加密断裂线点，特别是断裂线与DEM格网线交点的平面坐标与高程。
+      为了突出断裂线所显示的特征，可在原始采集的数据点的基础上作线性内插，加密断裂线点，特别是断裂线与 DEM 格网线交点的平面坐标与高程。
 
     - 重新划分区域
 
@@ -851,23 +851,23 @@
 
     - 分子区进行内插计算
 
-#### 4 DEM的精度及存储管理
+#### 4 DEM 的精度及存储管理
 
-- 估计DEM的精度方法
+- 估计 DEM 的精度方法
 
-  - 由地形功率谱与内插方法的传递函数估计DEM精度
+  - 由地形功率谱与内插方法的传递函数估计 DEM 精度
 
-  - 利用检查点的DEM精度评定
+  - 利用检查点的 DEM 精度评定
 
-    在DEM内插时，预留一部分数据点作为检查点,在建立DEM之后，由DEM内插出这些点的高程，DEM的精度
+    在 DEM 内插时，预留一部分数据点作为检查点,在建立 DEM 之后，由 DEM 内插出这些点的高程，DEM 的精度
 
-- DEM的存贮管理
+- DEM 的存贮管理
 
-  - DEM数据文件的存贮
+  - DEM 数据文件的存贮
 
   - 地形数据库
 
-  - **<u>DEM数据的压缩</u>**
+  - **<u>DEM 数据的压缩</u>**
 
     - 整型量存贮
 
@@ -881,13 +881,13 @@
 
     - 差分游程法（增量游程法）
 
-      当差分的绝对值大于127时，将该数据之前的数据作为一个游程
+      当差分的绝对值大于 127 时，将该数据之前的数据作为一个游程
 
       有很高的压缩率，但当游程较长时，数据的恢复需要较多的运算时间，因而其使用与管理不如小模块差分法方便
 
     - 小模块差分法（小模块增量法）
 
-      将DEM分成较大的格网——小模块，每一模块包含5×5或10×10个DEM格网
+      将 DEM 分成较大的格网——小模块，每一模块包含 5×5 或 10×10 个 DEM 格网
 
       保证每一数据能存入一字节中，需要在原始差分的基础上乘以一个系数。
 
@@ -899,7 +899,7 @@
 
       用位数（bit）最短的码表示出现概率最大的数，概率较小数用位数较长的码表示。
 
-  - DEM的管理
+  - DEM 的管理
 
 #### 5 不规则三角网的建立与应用
 
@@ -910,7 +910,7 @@
   - 不存在四点共圆；
   - 每个三角形对应于一个 Voronoi 图顶点；
   - 每个三角形边对应于一个 Voronoi 图边；
-  - 每个结点对应于一个Voronoi 图区域；
+  - 每个结点对应于一个 Voronoi 图区域；
 
 - 三角网数字高程模型的构建方法
 
@@ -924,12 +924,12 @@
     - 定义包含所有数据点的最小外界矩形范围，并以此作为最简单的凸闭包；
     - 按一定规则将数据区域的矩形范围进行格网划分；
     - 剖分数据区域的凸闭包形成两个超三角形，所有数据点都一定在这两个三角形范围内；
-    - 对包含P点的三角形进行搜索，得到搜索结果三角形T，将P与T的三个顶点相连，结果得到三个三角形，由内而外对整个三角网进行优化，重复上述步骤直至所有的点都处理完毕。
+    - 对包含 P 点的三角形进行搜索，得到搜索结果三角形 T，将 P 与 T 的三个顶点相连，结果得到三个三角形，由内而外对整个三角网进行优化，重复上述步骤直至所有的点都处理完毕。
   - 分割合并算法
-    - 先将数据点划分成多个子集，每个子集是易于进行三角化的，分别对每个子集进行三角剖分，三角剖分过程中运用LOP算法，保证得到的每个子集的三角网都是Delaunay三角网。
-    - 完成每个子集的三角剖分后，合并得到的子集的Delaunay三角网，从而得到最终的三角网。分割合并算法的思想相对来说比较简单。
+    - 先将数据点划分成多个子集，每个子集是易于进行三角化的，分别对每个子集进行三角剖分，三角剖分过程中运用 LOP 算法，保证得到的每个子集的三角网都是 Delaunay 三角网。
+    - 完成每个子集的三角剖分后，合并得到的子集的 Delaunay 三角网，从而得到最终的三角网。分割合并算法的思想相对来说比较简单。
   - 三维三角网格的构建
-  - 角度判断法建立TIN
+  - 角度判断法建立 TIN
     - 已知三角形的两个顶点，计算备选第三顶点的三角形内角的大小，选择最大者对应的点为该三角形的第三顶点
     - 将原始数据分块
     - 确定第一个三角形
@@ -942,7 +942,7 @@
     
 
     - 存贮量小，编辑方便。
-    - 计算量较大，不便于TIN 的快速检索与显示。
+    - 计算量较大，不便于 TIN 的快速检索与显示。
 
   - 直接表示三角形及邻接关系的结构
 
@@ -954,9 +954,9 @@
 
     
 
-#### **<u>6 数字地面模型的应用</u>**
+#### 6 数字地面模型的应用
 
-- **基于矩形格网的DEM多项式内插**
+- **基于矩形格网的 DEM 多项式内插**
 
   - 双线性多项式（双曲抛物面）内插
 
@@ -980,13 +980,13 @@
 
 - **<u>等高线的绘制</u>**
 
-  - 基于矩形格网DEM自动绘制等高线
+  - 基于矩形格网 DEM 自动绘制等高线
 
-    - 确定等高线高程（最低等高线高于DEM最低值，最高等高线低于DEM最高值）
+    - 确定等高线高程（最低等高线高于 DEM 最低值，最高等高线低于 DEM 最高值）
 
       
 
-    - 计算状态矩阵（表示等高线穿过DEM格网水平边与竖直边的状态）
+    - 计算状态矩阵（表示等高线穿过 DEM 格网水平边与竖直边的状态）
 
       
 
@@ -998,13 +998,13 @@
 
     - 等高线的起点和终点的处理
 
-      - 先搜索开曲线，沿DTM的四边搜索
+      - 先搜索开曲线，沿 DTM 的四边搜索
 
         
 
-        在搜索到开曲线起点之后，要将其起点置0.
+        在搜索到开曲线起点之后，要将其起点置 0.
 
-      - 处理完开曲线，再处理闭曲线，可按行（列）顺序搜索，搜索到的第一个边即为闭曲线的起点，起点也是终点，不能置0
+      - 处理完开曲线，再处理闭曲线，可按行（列）顺序搜索，搜索到的第一个边即为闭曲线的起点，起点也是终点，不能置 0
 
     - 内插等高线点
 
@@ -1015,7 +1015,7 @@
 
     - 搜索下一个等高线点
 
-      - 由进入边开始IN=1，按逆（顺）时针搜索离去边号，将状态矩阵相应边置0，并确定下个格网的进入边编号。
+      - 由进入边开始 IN=1，按逆（顺）时针搜索离去边号，将状态矩阵相应边置 0，并确定下个格网的进入边编号。
 
       - 若四条边都有等高线穿过，可根据中心点高程与进入边两端点高程判断
 
@@ -1025,7 +1025,7 @@
 
       - 若在某一条格网边上有地形特征线穿过。此时就可能在同一条格网边上出现两个等高线点。必须特征线与格网线的交点与相应的格网点内插等高线点，而不能直接用格网点内插等高线；在跟踪搜索等高线时，当等高线穿过山脊线(或山谷线)，还必须在山脊线(山谷线)上补插等高线点。
 
-      - 特征线穿过一个DTM格网边共有6种情况。它将一个格网分成2个多边形（三角形、四边形或五边形）。
+      - 特征线穿过一个 DTM 格网边共有 6 种情况。它将一个格网分成 2 个多边形（三角形、四边形或五边形）。
       - 对于断裂线，则不存在离去边，等高线就终止在断裂线上。对闭曲线应从其起点向另一方向搜索。
 
   - **基于三角网的等高线绘制**
@@ -1034,31 +1034,31 @@
 
     - 基于三角形搜索的等高线绘制
 
-      对于记录了三角形表的TIN，按记录的三角形搜索。
+      对于记录了三角形表的 TIN，按记录的三角形搜索。
 
       1. 对给定高程，将其与所有网点高程进行比较。若与网点高程相等，则将该网点高程加上（减去）一个微波正数，以使程序设计简单且不影响精度；
 
-      2. 设立三角形标志数组，其初始值为零，每一个元素与一个三角形对应，凡处理过的三角形将标志置为1，以后不再处理，直至等高线高程改变；
+      2. 设立三角形标志数组，其初始值为零，每一个元素与一个三角形对应，凡处理过的三角形将标志置为 1，以后不再处理，直至等高线高程改变；
 
       3. 按顺序判断每一个三角形的三边中的两条边是否有等高线穿过。直至搜索到等高线与网边的第一个交点，作为搜索起点，也是当前三角形的等高线进入边。线性内插该点的平面坐标；
 
-      4. 搜索该等高线在该三角形的离去边，也是相邻三角形的进入边，并内插其平面坐标，搜索方法与3类似，但是是对另外两边进行搜索；
-      5. 进入相邻三角形，重复第4步直至离去边没有相邻三角形（开曲线），或相邻三角形为搜索起点所在的三角形（闭曲线）；
+      4. 搜索该等高线在该三角形的离去边，也是相邻三角形的进入边，并内插其平面坐标，搜索方法与 3 类似，但是是对另外两边进行搜索；
+      5. 进入相邻三角形，重复第 4 步直至离去边没有相邻三角形（开曲线），或相邻三角形为搜索起点所在的三角形（闭曲线）；
       6. 对于开曲线，将已搜索到的等高线点顺序倒过来，并回到搜索起点向另一方向搜索，直至到达边界；
       7. 当一条等高线全部跟踪完后，将其光滑输出。然后继续三角形的搜索，直至全部三角形处理完，再改变等高线高程，重复以上过程，直至完成全部等高线的绘制为止。
 
     - 基于格网点搜索的等高线绘制
 
-      对于仅记录了网点邻接关系的TIN，只能按参考点的顺序，逐条格网边进行搜索。
+      对于仅记录了网点邻接关系的 TIN，只能按参考点的顺序，逐条格网边进行搜索。
 
-      1. 由于网点邻接关系中对每条格网边描述了两次，为了避免重复搜索，建立一个与邻接关系对应的标志数组，初值为零。每当一个边被处理后，与该边对应的标志数组两个单元均置1，则以后检测两个单元中的任意一个，均知道该边已处理过；
+      1. 由于网点邻接关系中对每条格网边描述了两次，为了避免重复搜索，建立一个与邻接关系对应的标志数组，初值为零。每当一个边被处理后，与该边对应的标志数组两个单元均置 1，则以后检测两个单元中的任意一个，均知道该边已处理过；
       2. 按格网点的顺序进行搜索；
-      3. 对每一格网点，按所记录的与该点形成格网边的另一端点的顺序搜索，直至搜索到第一个有等高线穿过的边的端点Q1，并内插该等高线；
-      4. 搜索以Q1为端点的该格网边的相邻边，若有等高线穿过，内插该点平面坐标。若相邻边没有等高线通过，则由该格网边另一端点的相邻边，搜索下一等高线点，并内插出其平面坐标；
-      5. 重复第4步，直至找不出下一个点。若最后一个点的坐标与起始点坐标相同，则为闭曲线，否则为开曲线。对开曲线按前述方法，从起始点反向搜索，直至终点；
+      3. 对每一格网点，按所记录的与该点形成格网边的另一端点的顺序搜索，直至搜索到第一个有等高线穿过的边的端点 Q1，并内插该等高线；
+      4. 搜索以 Q1 为端点的该格网边的相邻边，若有等高线穿过，内插该点平面坐标。若相邻边没有等高线通过，则由该格网边另一端点的相邻边，搜索下一等高线点，并内插出其平面坐标；
+      5. 重复第 4 步，直至找不出下一个点。若最后一个点的坐标与起始点坐标相同，则为闭曲线，否则为开曲线。对开曲线按前述方法，从起始点反向搜索，直至终点；
       6. 将等高线光滑输出；
-      7. 转到第3步，直至该点为端点的所有格网边处理完；
-      8. 转第2步，直至TIN的每一点处理完。然后改变等高线高程，重复以上过程。
+      7. 转到第 3 步，直至该点为端点的所有格网边处理完；
+      8. 转第 2 步，直至 TIN 的每一点处理完。然后改变等高线高程，重复以上过程。
 
   - **等高线光滑（曲线内插）**
 
@@ -1073,7 +1073,7 @@
 
   - 立体透视图制作流程
 
-    - 选择适当的参考面高程Z0，和高程的放大倍数m.
+    - 选择适当的参考面高程 Z0，和高程的放大倍数 m.
 
       
 
@@ -1085,19 +1085,19 @@
 
       视点为“摄影中心”，用共线方程从物点坐标计算“像点”。
 
-    - 确定像面主距f
+    - 确定像面主距 f
 
-      计算DEM四个角点的视线投射角$\alpha,\beta$，取出最小最小值。按公式计算主距。
+      计算 DEM 四个角点的视线投射角$\alpha,\beta$，取出最小最小值。按公式计算主距。
 
       
 
-    - 计算DEM各节点的“像点”坐标
+    - 计算 DEM 各节点的“像点”坐标
 
     - 消隐处理
 
       - 峰值法或高度缓冲器算法
 
-        1. 定义一个包含ｍ个元素的缓冲区，每个元素对应一列。将缓冲区初始化为ymin或0
+        1. 定义一个包含ｍ个元素的缓冲区，每个元素对应一列。将缓冲区初始化为 ymin 或 0
 
            
 
@@ -1105,13 +1105,13 @@
 
            
 
-        3. y坐标由线性内插计算，将该“点”的y坐标ｚ(ｋ)与缓冲区中的相应单元存放的坐标进行比较。若小于缓冲区中的坐标，则被遮挡，不必绘出。否则应当绘出，并将此坐标更新相应缓冲区单元。
+        3. y 坐标由线性内插计算，将该“点”的 y 坐标ｚ(ｋ)与缓冲区中的相应单元存放的坐标进行比较。若小于缓冲区中的坐标，则被遮挡，不必绘出。否则应当绘出，并将此坐标更新相应缓冲区单元。
 
-- DEM的其他应用
+- DEM 的其他应用
 
   - 坡度、坡向的计算
 
-    4个格同网点拟合一平面，根据法向量，计算坡度和坡向
+    4 个格同网点拟合一平面，根据法向量，计算坡度和坡向
 
   - 计算地表面积
 
@@ -1125,21 +1125,21 @@
 
   - **<u>单像修测</u>**
 
-    由于地图修测的主要内容是地物的增减，因而利用已有的DEM可进行单幅影像的修测，这样可节省资金与工时。
+    由于地图修测的主要内容是地物的增减，因而利用已有的 DEM 可进行单幅影像的修测，这样可节省资金与工时。
 
     1. 进行空间后方交会，确定方位元素；
 
     2. 量测像点坐标(x,y)；
 
-    3. 取一高程近似值Z0
+    3. 取一高程近似值 Z0
 
-    4. 将(x,y)与Z0代入共线方程，计算出地面平面坐标近似值
+    4. 将(x,y)与 Z0 代入共线方程，计算出地面平面坐标近似值
 
-    5. 由平面坐标及DEM内插出高程Z1；
+    5. 由平面坐标及 DEM 内插出高程 Z1；
 
-    6. 重复4和5，直至两次迭代地面坐标之差小于限差。
+    6. 重复 4 和 5，直至两次迭代地面坐标之差小于限差。
 
-    用单幅影像与DEM进行修测是一个迭代求解的过程，当地面坡度与物点投影方向与竖直方向夹角之和大于等于90度时，迭代将不会收敛。此时，可在每两次迭代后，求出其高程平均值作为新的Z0，或在三次迭代后由下式计算近似正确高程。$Z=\cfrac{Z_1Z_3-Z_2^2}{Z_1+Z_3-2Z_2}$
+    用单幅影像与 DEM 进行修测是一个迭代求解的过程，当地面坡度与物点投影方向与竖直方向夹角之和大于等于 90 度时，迭代将不会收敛。此时，可在每两次迭代后，求出其高程平均值作为新的 Z0，或在三次迭代后由下式计算近似正确高程。$Z=\cfrac{Z_1Z_3-Z_2^2}{Z_1+Z_3-2Z_2}$
 
 ### 第八章 数字微分纠正
 
@@ -1147,7 +1147,7 @@
 
 根据有关的参数与数字地面模型，利用相应的构像方程式，或按一定的数学模型用控制点解算，从原始非正射投影的数字影像获取正射影像
 
-#### **<u>2 框幅式中心投影影像的数字微分纠正</u>**
+#### 2 框幅式中心投影影像的数字微分纠正
 
 - 数字微分纠正的基本原理
 
@@ -1161,7 +1161,7 @@
 
   - 计算像点坐标
 
-    由共线方程计算，地面点Z坐标通过DEM内插求得；
+    由共线方程计算，地面点 Z 坐标通过 DEM 内插求得；
 
   - 灰度内插
 
@@ -1173,7 +1173,7 @@
 
 - 正解法（直接法）数字微分纠正
 
-  - 需要假定Z的近似值，进行迭代。
+  - 需要假定 Z 的近似值，进行迭代。
 
   - 纠正后的图像上，所得的像点是非规则排列的，有的像素内可能出现“空白”，而有的像素可能出现重复。因此很难实现灰度内插并获得规则排列的数字影像。
 
@@ -1181,11 +1181,11 @@
 
 - 数字纠正实际解法及分析
 
-  从原理上讲，数字纠正是点元素纠正，但在实际的软件系统中，基本上都是以“面元素”作为纠正单元，一般以正方形作为纠正单元。即用反算公式计算该纠正单元4个角点的像点坐标，而纠正单元内的坐标则用双线性内插求得。
+  从原理上讲，数字纠正是点元素纠正，但在实际的软件系统中，基本上都是以“面元素”作为纠正单元，一般以正方形作为纠正单元。即用反算公式计算该纠正单元 4 个角点的像点坐标，而纠正单元内的坐标则用双线性内插求得。
 
   
 
-#### **<u>3 线性阵列扫描影像的数字纠正</u>**
+#### 3 线性阵列扫描影像的数字纠正
 
 扫描行之间的外方位元素各自不同，随时间不断变化，线性阵列扫描影像是多中心投影影像。
 
@@ -1199,15 +1199,15 @@
 
     
 
-    t值实际上表达了上图坐标系中像点p在时刻t的y坐标。
+    t 值实际上表达了上图坐标系中像点 p 在时刻 t 的 y 坐标。
 
-    迭代求解t后，求像点x坐标
+    迭代求解 t 后，求像点 x 坐标
 
   - 直接法纠正
 
     - 给定高程初始值
     - 计算平面坐标近似值
-    - 用DEM与(X1,Y1)内插出高程Z1
+    - 用 DEM 与(X1,Y1)内插出高程 Z1
     - 对应的地面点(X,Y,Z)
 
   - 直接法与间接法相结合的方法
@@ -1223,7 +1223,7 @@
   - 优点：适用范围广、对卫星参数的保密性、处理效率高。
   - 缺点：不是严密模型，损失精度、方程解的不稳定性（参数相关、插值误差等）、不适用于变形大的影像（航空或异轨模式的影像）等。
 
-#### **<u>4 立体正射影像对的制作</u>**
+#### 4 立体正射影像对的制作
 
 - 基本思想
 
@@ -1231,9 +1231,9 @@
 
 - 斜平行投影法方法步骤
 
-  - 按XY平面上一定间隔的方形格网，将它正射投影到DEM，获得Xi、Yi、Zi坐标。由共线方程求出对应像点在左片上的坐标xi， yi，用此影像断面数据可制作正射影像；
+  - 按 XY 平面上一定间隔的方形格网，将它正射投影到 DEM，获得 Xi、Yi、Zi 坐标。由共线方程求出对应像点在左片上的坐标 xi， yi，用此影像断面数据可制作正射影像；
 
-  - XY平面上同样方格网，沿斜平行投影方 向将格网点平行投影到DEM表面。
+  - XY 平面上同样方格网，沿斜平行投影方 向将格网点平行投影到 DEM 表面。
 
     
 
@@ -1254,7 +1254,7 @@
   - 它来修测地形图上的地物和量测具有一定高度物体的高度等是十分有效
   - 对在资源调查、土地利用面积估算、交通线路的初步规划
 
-#### **<u>5 真正射影像的概念及制作原理</u>**
+#### 5 真正射影像的概念及制作原理
 
 正射影像作为一个视觉影像地图产品，影像上由于投影差引起的遮蔽现象不仅影响了正射影像作为地图产品的基本功能发挥， 而且还影响了影像的视觉解译能力。
 
@@ -1279,13 +1279,13 @@
 
 - 真正射影像的概念及其制作原理
 
-  - DEM是地表面的高程， 即它并没有顾及地面上目标物体的高度情况，微分纠正所得到的影像虽然叫做正射影像，地面上3维目标（如建筑物、 树木、桥梁等）的顶部并没有被纠正到应有的平面位置（与底部重合），而是有投影差存在。
+  - DEM 是地表面的高程， 即它并没有顾及地面上目标物体的高度情况，微分纠正所得到的影像虽然叫做正射影像，地面上 3 维目标（如建筑物、 树木、桥梁等）的顶部并没有被纠正到应有的平面位置（与底部重合），而是有投影差存在。
 
   - 所谓真正射影像，简单一点讲就是在数字微分纠正过程中，要以数字表面模型（DSM）为基础来进行数字微分纠正。
 
-    - DSM采集的困难
+    - DSM 采集的困难
 
-      两种主要方法：半自动方式在摄影测量工作站上采集、用机载三维激光扫描仪或断面扫描仪直接扫描得到。实际地表覆盖的高低起伏很复杂，若以较大的采样间隔去采集DSM，将直接影响所生成的真正射影像质量。DSM采集的对象是否有必要包括地面上一切有一定高度的目标也值得考虑。
+      两种主要方法：半自动方式在摄影测量工作站上采集、用机载三维激光扫描仪或断面扫描仪直接扫描得到。实际地表覆盖的高低起伏很复杂，若以较大的采样间隔去采集 DSM，将直接影响所生成的真正射影像质量。DSM 采集的对象是否有必要包括地面上一切有一定高度的目标也值得考虑。
 
     - 相对遮蔽信息补偿的困难
 
@@ -1306,7 +1306,7 @@
 
   - 基于马斯克的单幅影像匀光原理
 
-  - 基于Wallis滤波器的多幅影像匀光原理
+  - 基于 Wallis 滤波器的多幅影像匀光原理
 
     
 
@@ -1335,21 +1335,21 @@
         在模型解算时并不是两两进行解算，而是将所有影像重叠区域的校正模型统一进行解算，取得全局统计意义上的最优解。
 
         - 基于最小二乘区域网平差全局优化方法
-          1. 假设影像的色调调整参数为比例参数k和平移参数b
-          2. 解方程求出k和b
-          3. 解得每幅影像的色调调整参数后,计算出每张影像的色调标准值，然后可利用Wallis滤波算子将每张影像的色调调整至标准值。
+          1. 假设影像的色调调整参数为比例参数 k 和平移参数 b
+          2. 解方程求出 k 和 b
+          3. 解得每幅影像的色调调整参数后,计算出每张影像的色调标准值，然后可利用 Wallis 滤波算子将每张影像的色调调整至标准值。
 
   - 影像镶嵌
 
     影像镶嵌技术的关键则是拼接线的选择过程，核心就是避开镶嵌边界横跨完整地物等情况
 
-    - twin snakes算子选择正射影像的镶嵌线
+    - twin snakes 算子选择正射影像的镶嵌线
     - 最短路径搜索算法进行最优缝线搜索
     - 利用蚁群算法进行正射影像镶嵌线自动选择的方法
 
-#### **<u>7 景观图的制作原理</u>**
+#### 7 景观图的制作原理
 
-特大倾角“摄影” ，g为像点（x，y）对应的灰度值， 根据地形及虚拟光源模拟出来的值。
+特大倾角“摄影” ，g 为像点（x，y）对应的灰度值， 根据地形及虚拟光源模拟出来的值。
 
 - 模拟灰度景观图
 
@@ -1369,8 +1369,8 @@
 
 - 真实景观图
 
-  - 由DEM与原始影像制作景观图
-    - 将每一DEM格网划分为m×n个地面元，原则依然是使景观图上像素之间无缝隙并尽可能地大；
+  - 由 DEM 与原始影像制作景观图
+    - 将每一 DEM 格网划分为 m×n 个地面元，原则依然是使景观图上像素之间无缝隙并尽可能地大；
     - 计算各地面元在景观图上的像素行列号；
     - 进行消隐处理；
     - 由地面元计算其对应的原始影像像素行列号
@@ -1383,7 +1383,7 @@
 
 - 无人机概述
 
-  是利用先进的无人驾驶飞行器技术、遥感传感器技术、遥测遥控技术、通信技术、GPS定位技术和POS定位定姿技术实现获取目标区域综合信息的一种新兴解决方案。
+  是利用先进的无人驾驶飞行器技术、遥感传感器技术、遥测遥控技术、通信技术、GPS 定位技术和 POS 定位定姿技术实现获取目标区域综合信息的一种新兴解决方案。
 
   - 无人机的用途
     - 影像资料获取
@@ -1443,11 +1443,11 @@
 
     - 影像畸变大
 
-      相对传统航摄仪来说，无人机影像畸变大，边缘地方畸变可达200个像素以上。
+      相对传统航摄仪来说，无人机影像畸变大，边缘地方畸变可达 200 个像素以上。
 
     - 影像像幅小，数目多
 
-    - 影像都有较准确的GPS信息
+    - 影像都有较准确的 GPS 信息
 
 - **无人机摄影测量处理难点**
 
@@ -1519,7 +1519,7 @@
     - 颜色特征：颜色矩、颜色直方图
     - 纹理特征：灰度共生矩阵、局部二值模
     - 形状特征：傅里叶形状描述符
-    - 结构特征：SIFT特征、SURF特征、ORB特征等
+    - 结构特征：SIFT 特征、SURF 特征、ORB 特征等
 
   - 相似度度量： 比较方法
 
@@ -1541,26 +1541,26 @@
 
     - 视觉单词
 
-      视觉单词的提出是基于bag of words模型的。首先对于数据集的图像提取特征，如sift 。sift特征在图像描述方面是应用最为广泛的一种特征，由David Lowe在1999年提出，于2004年完善。sift特征得到的结果是，对于图像上的每一个兴趣点都得到一个128维的描述向量（图上有多少兴趣点，兴趣点的分布都由算法本身决定）。然后通过kmeans聚类得到k个聚类中心，这些聚类中心就是我们所说的视觉单词，因为这些聚类中心代表了一类具有共同特点的特征。
+      视觉单词的提出是基于 bag of words 模型的。首先对于数据集的图像提取特征，如 sift 。sift 特征在图像描述方面是应用最为广泛的一种特征，由 David Lowe 在 1999 年提出，于 2004 年完善。sift 特征得到的结果是，对于图像上的每一个兴趣点都得到一个 128 维的描述向量（图上有多少兴趣点，兴趣点的分布都由算法本身决定）。然后通过 kmeans 聚类得到 k 个聚类中心，这些聚类中心就是我们所说的视觉单词，因为这些聚类中心代表了一类具有共同特点的特征。
 
     - 词汇树检索算法关键步骤
 
       - 分析数据，提取特征
       
-      - 建立VT树
+      - 建立 VT 树
       
-      - 对任意n张查看是否在树中的路径相似
+      - 对任意 n 张查看是否在树中的路径相似
       
-        **<u>词汇树的使用最核心的是特征向量就是遍历路径，这点非常重要，将影像转换为特征量。</u>**
+       **<u>词汇树的使用最核心的是特征向量就是遍历路径，这点非常重要，将影像转换为特征量。</u>**
 
   - 感知哈希算法
 
     对每张图片生成一个"指纹"（fingerprint）字符串，然后比较不同图片的指纹。结果越接近，就说明图片越相似。
 
     - 缩小尺寸，只保留结构、明暗等基本信息。
-    - 简化色彩，如转为64级灰度。
+    - 简化色彩，如转为 64 级灰度。
     - 计算平均值。
-    - 比较像素的灰度，生成指纹码（Census变换）。
+    - 比较像素的灰度，生成指纹码（Census 变换）。
 
     - 计算哈希值（Hamming Distance，汉明距）
 
@@ -1572,19 +1572,19 @@
 
   - 影像匹配：灰度相关 NCC、特征匹配、语义匹配
 
-    SIFT匹配基本原理：
+    SIFT 匹配基本原理：
 
     - 特征提取：尺度不变，最基本原理是影像放大和缩小时候，特征都还在。
-    - 特征描述：旋转不变，最基本原理，360度都比较，改进一点，旋转最明显的方向来描述。
-    - 特征匹配：比较128维向量，看谁最相近就可以。
+    - 特征描述：旋转不变，最基本原理，360 度都比较，改进一点，旋转最明显的方向来描述。
+    - 特征匹配：比较 128 维向量，看谁最相近就可以。
 
     ORB 特征匹配算法
 
-    - 特征点检测，FAST特征检测算法
-    - 特征点描述，BRIEF算法
+    - 特征点检测，FAST 特征检测算法
+    - 特征点描述，BRIEF 算法
     - 特征点匹配，汉明距离
 
-  - 粗差剔除：剔粗差随机抽样一致RANSAC
+  - 粗差剔除：剔粗差随机抽样一致 RANSAC
 
     首先根据具体问题设计出某个目标函数，然后通过反复提取最小点集估计该函数中参数的初始值，利用这些初始值把所有的数据分为“内点”和“外点”，最后用所有的内点重新计算和估计函数的参数。
 
@@ -1622,7 +1622,7 @@
 
   
 
-  因为基础矩阵与本质矩阵是旋转矩阵，是正定的，但直接线性解仅仅是9个系数，不一定满足旋转矩阵条件，要想解出基础矩阵（或本质矩阵），需要 SVD分解
+  因为基础矩阵与本质矩阵是旋转矩阵，是正定的，但直接线性解仅仅是 9 个系数，不一定满足旋转矩阵条件，要想解出基础矩阵（或本质矩阵），需要 SVD 分解
 
   
 
@@ -1630,7 +1630,7 @@
 
     
 
-  - 为让求解的旋转矩阵R满足正定条件，此时需要使用QR分解，才能得到[R|T]。
+  - 为让求解的旋转矩阵 R 满足正定条件，此时需要使用 QR 分解，才能得到[R|T]。
 
 - 平差算法
 
@@ -1742,48 +1742,48 @@
 
 ### 简答题
 
-- **SIFT** 【※※】的原理，为什么有旋转不变性和尺度不变性
-- **SIFT** 【※※】和 **Harris** 【※※】的优缺点，原理
-- 利用影像谱分析原理说明 **由粗到精的影像匹配策略** 【※※※】的有哪些优点？
-- **金字塔** 【※※※】影像的定义，好处，两种关于 **金字塔影像的匹配方法** 以及优缺点
-- **金字塔** 【※※※】影像的原理，优势，基于金字塔影像的 **最小二乘匹配**【※※※※※※※※※】流程框图和过程介绍
-- **灰度匹配** 【※※※※※※※】和 **特征匹配** 【※※】的区别，基于实际算法进行比较
-- **相关系数** 【※※※※※※※※】、**最小二乘法** 【※※※※※※※※※】、 **跨接法** 【※※】的特点，你觉得哪个好并说明原因
-- “ **相关系数** 【※※※※※※※※】最大”影像匹配、基于物方的 **VLL法** 【※※】影像匹配和 **最小二乘法影像匹配** 【※※※※※※※※※】的相同点及差别是什么？
-- 简述 **铅垂线轨迹法（VLL）** 【※※】影像匹配方法的原理，并与相关系数法进行比较，说明两者的异同点。
-- 请说明利用 **相关系数** 【※※※※※※※※】的影像匹配和 **最小二乘法影像匹配** 【※※※※※※※※※】的异同点？
-- 请说明考虑辐射畸变的核线影像 **最小二乘匹配** 【※※※※※※※※※】的原理及过程
-- 简述 **最小二乘影像匹配** 【※※※※※※※※※】的原理以及流程
-- 简述一种框幅式航空影像制作其 **核线影像的** 【※※※※】方法。
-- 什么是同名核线？简述一种确定 **同名核线** 【※※※】的方法。
-- 两种 **TIN追踪** 【※※※】等高线的方法
-- 简述基于 **不规则三角网** 【※※※】绘制等高线的方法和过程
+- **SIFT**【※※】的原理，为什么有旋转不变性和尺度不变性
+- **SIFT**【※※】和**Harris**【※※】的优缺点，原理
+- 利用影像谱分析原理说明**由粗到精的影像匹配策略**【※※※】的有哪些优点？
+- **金字塔**【※※※】影像的定义，好处，两种关于**金字塔影像的匹配方法**以及优缺点
+- **金字塔**【※※※】影像的原理，优势，基于金字塔影像的**最小二乘匹配**【※※※※※※※※※】流程框图和过程介绍
+- **灰度匹配**【※※※※※※※】和**特征匹配**【※※】的区别，基于实际算法进行比较
+- **相关系数**【※※※※※※※※】、**最小二乘法**【※※※※※※※※※】、**跨接法**【※※】的特点，你觉得哪个好并说明原因
+- “**相关系数**【※※※※※※※※】最大”影像匹配、基于物方的**VLL 法**【※※】影像匹配和**最小二乘法影像匹配**【※※※※※※※※※】的相同点及差别是什么？
+- 简述**铅垂线轨迹法（VLL）**【※※】影像匹配方法的原理，并与相关系数法进行比较，说明两者的异同点。
+- 请说明利用**相关系数**【※※※※※※※※】的影像匹配和**最小二乘法影像匹配**【※※※※※※※※※】的异同点？
+- 请说明考虑辐射畸变的核线影像**最小二乘匹配**【※※※※※※※※※】的原理及过程
+- 简述**最小二乘影像匹配**【※※※※※※※※※】的原理以及流程
+- 简述一种框幅式航空影像制作其**核线影像的**【※※※※】方法。
+- 什么是同名核线？简述一种确定**同名核线**【※※※】的方法。
+- 两种**TIN 追踪**【※※※】等高线的方法
+- 简述基于**不规则三角网**【※※※】绘制等高线的方法和过程
 - **矩形格网等高线跟踪**【※※※】过程，如果有特征线存在如何处理？
-- 在某个连续光滑的区域内有 N 个分布不规则的数据点，请叙述如何利用 **多面函数高程模型内插** 【※※※※】的方法内插规则矩形网点的高程，请给出算法过程。
-- 简述一次样条有限元 **数字高程模型内插** 【※※※※】方法的原理流程
-- 简述一种 **数字高程模型** 的内插方法【※※※※】原理及特点
-- 在某个连续光滑的区域内有 N 个分布不规则的数据点，请叙述如何利用有限元 **高程模型内插** 【※※※※】的方法内插规则矩形网点的高程，并说明如果有地形特征线如何处理。
-- **TIN** 和 **Grid**【※※※※】的建立过程，区别，以两个实际算法为代表进行介绍
-- 请叙述一种构建 **不规则的三角网** 【※※※※】的方法。
-- **DEM** 【※※※】的表示方法有哪些，写出生成DEM的方法
-- **DEM** 【※※※】和 **DSM** 的原理，区别，建立方法，建立的关键技术
-- **ADS40 DMC** 的影像 **制作正射影像** 【※※※※※※】的方法，有什么相同点和不同点
-- **ASD80** 相机的 **正射影像制作** 【※※※※※※】方法，原理
-- 一幅SPOT影像，当影像的外方位元素和 DEM 已知时，如何制作 **正射影像** 【※※※※※※】，请说明其原理过程，并指出与框幅式的航空影像制作正射影像算法的相同和不同之处
-- 简述利用斜平行投影法制作 **立体正射影像对** 【※※※※※※】的原理。
-- 线性阵列扫描影像在利用反解法 **制作正射影像** 【※※※※※※】时会存在什么问题？并指出目前解决这类问题的一种方法，简要说明其原理。
-- 什么是真正射影像？ **制作真正射影像** 【@】需要解决那些关键问题？
-- 简述利用单张航空影像进行 **修测** 【@】的原理。
+- 在某个连续光滑的区域内有 N 个分布不规则的数据点，请叙述如何利用**多面函数高程模型内插**【※※※※】的方法内插规则矩形网点的高程，请给出算法过程。
+- 简述一次样条有限元**数字高程模型内插**【※※※※】方法的原理流程
+- 简述一种**数字高程模型**的内插方法【※※※※】原理及特点
+- 在某个连续光滑的区域内有 N 个分布不规则的数据点，请叙述如何利用有限元**高程模型内插**【※※※※】的方法内插规则矩形网点的高程，并说明如果有地形特征线如何处理。
+- **TIN**和**Grid**【※※※※】的建立过程，区别，以两个实际算法为代表进行介绍
+- 请叙述一种构建**不规则的三角网**【※※※※】的方法。
+- **DEM**【※※※】的表示方法有哪些，写出生成 DEM 的方法
+- **DEM**【※※※】和 **DSM** 的原理，区别，建立方法，建立的关键技术
+- **ADS40 DMC**的影像**制作正射影像**【※※※※※※】的方法，有什么相同点和不同点
+- **ASD80**相机的**正射影像制作**【※※※※※※】方法，原理
+- 一幅 SPOT 影像，当影像的外方位元素和 DEM 已知时，如何制作**正射影像**【※※※※※※】，请说明其原理过程，并指出与框幅式的航空影像制作正射影像算法的相同和不同之处
+- 简述利用斜平行投影法制作**立体正射影像对**【※※※※※※】的原理。
+- 线性阵列扫描影像在利用反解法**制作正射影像**【※※※※※※】时会存在什么问题？并指出目前解决这类问题的一种方法，简要说明其原理。
+- 什么是真正射影像？**制作真正射影像**【@】需要解决那些关键问题？
+- 简述利用单张航空影像进行**修测**【@】的原理。
 
-- 简述 **真实景观图** 【※※】的制作原理。
+- 简述**真实景观图**【※※】的制作原理。
 
 ### 综述题
 
-- 四种 **特征提取算子** 【※※※】的优缺点，图出其中一种的流程图，生成 **核线影像** 【※※※※】的原理，画出特征点匹配的流程图，你的算法有什么改进。
+- 四种**特征提取算子**【※※※】的优缺点，图出其中一种的流程图，生成**核线影像**【※※※※】的原理，画出特征点匹配的流程图，你的算法有什么改进。
 
   |          | 优点                                                         | 缺点                                             |
   | -------- | ------------------------------------------------------------ | ------------------------------------------------ |
-  | Moravec  | 计算简单                                                     | 只在4个方向上计算梯度，因此边缘对其影响很大      |
+  | Moravec  | 计算简单                                                     | 只在 4 个方向上计算梯度，因此边缘对其影响很大      |
   | Harris   | 计算简单，只用到灰度的一阶差分  特征点分布合理  可以定量地提取特征点  稳定 | 对尺度变化敏感  阈值难以判断  定位有偏差  速度慢 |
   | Forstner | 利用协方差矩阵和误差椭圆可以选出误差椭圆尽可能小而且接近于圆的点，即 | 计算复杂                                         |
   | Sift     | 具有尺度不变性、旋转不变性                                   | 对仿射变换不具有适应性                           |
@@ -1793,31 +1793,31 @@
   - 基于几何纠正的方法：首先将倾斜像片纠正为水平像片，然后在水平影像上获取核线，水平影像上，同一行即表示一条核线
   - 基于共面方程的方法：根据左侧摄站同某一确定点的连线、基线、左核线上任意一个其他点共面，得到左核线的方程，再通过左侧摄站同某一确定点的连线、基线、右测站到右影像该条核线的任一点共面，求出右核线方程，即建立核线对应关系
 
-- **核线匹配** 【※※※※】和一般匹配的区别，你用的是哪种，为什么？你做的特征匹配方法，原理，流程框图（要非常详细，包括阈值是多少）
+- **核线匹配**【※※※※】和一般匹配的区别，你用的是哪种，为什么？你做的特征匹配方法，原理，流程框图（要非常详细，包括阈值是多少）
 
-- 结合课间编程实习内容，请叙述两种 **特征点提取算法** 的流程和特点，结合具体数据说明选择不同的计算窗口和候选窗口对特征点数量以及质量的影响结果。并画出相应的程序框图。
+- 结合课间编程实习内容，请叙述两种**特征点提取算法**的流程和特点，结合具体数据说明选择不同的计算窗口和候选窗口对特征点数量以及质量的影响结果。并画出相应的程序框图。
 
-- 结合课间编程实习内容，请叙述基于特征点采用 **相关系数** 【※※※※※※※※】进行同名点提取的算法流程，结合具体数据说明选择不同的计算窗口对寻找同名点数量和质量的影响，并分析原因。
+- 结合课间编程实习内容，请叙述基于特征点采用**相关系数**【※※※※※※※※】进行同名点提取的算法流程，结合具体数据说明选择不同的计算窗口对寻找同名点数量和质量的影响，并分析原因。
 
-- 结合课间编程实习内容，请叙述基于特征点采用 **相关系数** 【※※※※※※※※】进行同名点提取的方案和算法流程， 结合具体数据说明采用 **最小二乘法影像匹配** 【※※※※※※※※※】能够提高影像匹配的精度，并说明原因。
+- 结合课间编程实习内容，请叙述基于特征点采用**相关系数**【※※※※※※※※】进行同名点提取的方案和算法流程， 结合具体数据说明采用**最小二乘法影像匹配**【※※※※※※※※※】能够提高影像匹配的精度，并说明原因。
 
-- 什么是 **特征匹配** 【※※】？它与 **基于灰度的影像匹配** 【※※※※※※※※】有什么不同？结合课间编程实习内容， 请说明实现自动相对定向的方法原理和关键技术。
+- 什么是**特征匹配**【※※】？它与**基于灰度的影像匹配**【※※※※※※※※】有什么不同？结合课间编程实习内容， 请说明实现自动相对定向的方法原理和关键技术。
 
-- <u>试说明基于 **灰度差平方最小** 、**单点最小二乘法** 【※※※※※※※※※】与 **多点最小二乘法影像匹配** 这三种算法的区别与联系</u>
+- <u>试说明基于**灰度差平方最小**、**单点最小二乘法**【※※※※※※※※※】与**多点最小二乘法影像匹配**这三种算法的区别与联系</u>
 
-- 分析 **最小二乘法影像匹配** 【※※※※※※※※※】和 **跨接法**【※※】 影像匹配这两种方法的特点，并指出它们的区别与联系。
+- 分析**最小二乘法影像匹配**【※※※※※※※※※】和**跨接法**【※※】 影像匹配这两种方法的特点，并指出它们的区别与联系。
 
-- 结合课间编程实习内容，请叙述 **基于特征点** 【@】的影像匹配方法原理，并画出相应的程序框图。
+- 结合课间编程实习内容，请叙述**基于特征点**【@】的影像匹配方法原理，并画出相应的程序框图。
 
 - 除了所学过的影像匹配方法之外，你还知道哪几种比较有效的匹配算法,请叙述其中 一种方法的基本原理及特点？【@】
 
 - **倾斜摄影测量**【※※】的关键技术
 
-- 数字摄影测量热点、 **倾斜摄影测量** 【※※】关键技术
+- 数字摄影测量热点、**倾斜摄影测量**【※※】关键技术
 
-- **真实景观图**【※※】与 **模拟景观图** 的区别是什么？请说明制作真实景观图的原理以及在 VirtuoZo 作业流程。
+- **真实景观图**【※※】与**模拟景观图**的区别是什么？请说明制作真实景观图的原理以及在 VirtuoZo 作业流程。
 
-- 线性阵列扫描影像在 **制作正射影像** 【※※※※※※】时会存在什么问题？并指出目前解决这类问题的一种方法， 简要说明其原理
+- 线性阵列扫描影像在**制作正射影像**【※※※※※※】时会存在什么问题？并指出目前解决这类问题的一种方法， 简要说明其原理
 
   
 
