--- a/docs/paper/RS/UAV/南极无人机摄影测量论文概览.md
+++ b/docs/paper/RS/UAV/南极无人机摄影测量论文概览.md
@@ -4,7 +4,7 @@ title: 南极无人机摄影测量论文概览
 
 # 南极无人机摄影测量论文概览
 
-## 南极1:5000 地形图测绘关键技术及相关问题处理 
+## 南极 1:5000 地形图测绘关键技术及相关问题处理 
   - 使用的是直升飞机
   - 测区地理概况
     - 低温大风
@@ -17,7 +17,7 @@ title: 南极无人机摄影测量论文概览
   - 南极地区常用的地图投影方式
     - 极方位立体投影（方位投影）
       - 这种投影方式非常适合于绘制半球、大陆以及中等尺度的地图（例如整个南极洲地图）
-      - 国家南极考察委员会和原武汉测绘科技大学于1989年编制的1∶6000000的《南极洲全图》也是采用这种投影方式
+      - 国家南极考察委员会和原武汉测绘科技大学于 1989 年编制的 1∶6000000 的《南极洲全图》也是采用这种投影方式
     - 普通横轴墨卡托投影（UTM，圆柱投影）
       - 般在南极地区局部区域范围内的地图投影均采用这种投影方式
     - 兰伯特正形（等角）圆锥投影等（圆锥投影）
@@ -101,7 +101,7 @@ title: 南极无人机摄影测量论文概览
       - 回避
 ## 南极遥感应用研究的实地考察  
   - 纯意义上的讨论
-## 非量测数码相机（哈苏H1D型）在南极项目生产中的应用  
+## 非量测数码相机（哈苏 H1D 型）在南极项目生产中的应用  
   - 它为什么能用 VirtuoZo 跑啊？因为是传统摄影测量吗？
   - 相机的检校及数码影像精度检测
   - 非量测数码相机在南极项目生产中的应用
