--- a/docs/programming/julia/准备工作.md
+++ b/docs/programming/julia/准备工作.md
@@ -12,7 +12,7 @@
     - 下载
     - 配置环境变量
     
-        [环境变量 · Julia中文文档 (julialang.org)](https://cn.julialang.org/JuliaZH.jl/latest/manual/environment-variables/index.html)
+        [环境变量 · Julia 中文文档 (julialang.org)](https://cn.julialang.org/JuliaZH.jl/latest/manual/environment-variables/index.html)
         
     - 安装插件
     - 设置国内镜像
@@ -23,8 +23,8 @@
 
 - 推荐网页
         
-    [Julia语言入门 (pku.edu.cn)](https://www.math.pku.edu.cn/teachers/lidf/docs/Julia/html/_book/index.html)
+    [Julia 语言入门 (pku.edu.cn)](https://www.math.pku.edu.cn/teachers/lidf/docs/Julia/html/_book/index.html)
 
 ## Julia 中文文档
 
-[主页 · Julia中文文档 (juliacn.com)](https://docs.juliacn.com/latest/) 和 [Julia中文文档.pdf (juliacn.com)](https://docs.juliacn.com/pdf/dev/Julia%E4%B8%AD%E6%96%87%E6%96%87%E6%A1%A3.pdf)
+[主页 · Julia 中文文档 (juliacn.com)](https://docs.juliacn.com/latest/) 和 [Julia 中文文档.pdf (juliacn.com)](https://docs.juliacn.com/pdf/dev/Julia%E4%B8%AD%E6%96%87%E6%96%87%E6%A1%A3.pdf)
